EmailJS.json file Updated

--- a/src/components/WorkCard/style.css
+++ b/src/components/WorkCard/style.css
@@ -40,7 +40,7 @@
   position: absolute;
   right: 0px;
   bottom: 50px;
-  color: #fff;
+  color: #ffffff;
   font-size: 18px;
   font-family: var(--NML);
   font-style: normal;
@@ -63,6 +63,12 @@
   text-transform: uppercase;
   mix-blend-mode: difference;
   max-width: 20ch;
+}
+
+.workCard--body img {
+  opacity: 0.8;
+  filter: saturate(0.3) blur(3px);
+  border-radius: 15px;
 }
 
 @media (max-width: 1500px) {
