--- a/src/components/WorkCard/style.css
+++ b/src/components/WorkCard/style.css
@@ -40,11 +40,11 @@
   position: absolute;
   right: 0px;
   bottom: 50px;
-  color: #ffffff;
+  color: #fff;
   font-size: 18px;
   font-family: var(--NML);
   font-style: normal;
-  font-weight: 500;
+  font-weight: 700;
   line-height: 140%; /* 25.2px */
   opacity: 0.6;
   mix-blend-mode: hard-light;
