--- a/src/components/WorkCard/style.css
+++ b/src/components/WorkCard/style.css
@@ -1,6 +1,7 @@
 .workCard {
   grid-column: span 1;
   margin-top: 50px;
+  z-index: 1;
 }
 
 .workCard--head {
@@ -67,8 +68,16 @@
 
 .workCard--body img {
   opacity: 0.8;
-  filter:  blur(3px);
+  filter: blur(3px);
   border-radius: 15px;
+}
+
+.overlay--link {
+  position: absolute;
+  inset: 0;
+  z-index: 5;
+  background: transparent;
+  display: block;
 }
 
 @media (max-width: 1500px) {
